# grok-desktop

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Grok-Desktop.bat  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ROADMAP.md  SCREENSHOTS.md  UPSTREAM_COMPATIBILITY.md
scripts/: _run-tauri-dev.ps1  launch-dev.ps1  launch-stable.ps1
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml
src-tauri/src/: agent_runs.rs  capabilities.rs  commands.rs  config.rs  grok_acp.rs  grok_cli.rs  grok_process.rs  image_handler.rs  launch_status.rs  lib.rs  privacy.rs  tray.rs  usage.rs
src-tauri/windows/: installer-hooks.nsh
src/lib/: log.ts  text.ts
src/lib/components/: AgentsWorkspace.svelte  ChatArea.svelte  DocumentationModal.svelte  GrokCliUpdateControl.svelte  ImageDropZone.svelte  InteractionPrompt.svelte  Message.svelte  ModelSelector.svelte  PermissionPrompt.svelte  PrivacyCenter.svelte  ProjectDialog.svelte  RightPanel.svelte  SettingsModal.svelte  Sidebar.svelte  UpdateControl.svelte  UsageMeter.svelte  VerboseToggle.svelte  YoloToggle.svelte
src/lib/stores/: agents.ts  capabilities.ts  chat.ts  launch.ts  privacy.ts  projects.ts  settings.ts  updater.ts
src/routes/: +page.svelte
